@startuml
skinparam classAttributeIconSize 0

class Main {
  +main(args: String[]): void
  -runValidate(validator: BracketValidator, args: String[]): void
  -runFile(validator: BracketValidator, args: String[]): void
  -runExperiments(validator: BracketValidator): void
  -runQuickDemo(validator: BracketValidator): void
  -printResult(label: String, result: ValidationResult): void
  -printUsage(): void
}

class BracketValidator {
  +validate(input: String): ValidationResult
  +validate(input: String, ignoreNonBracketChars: boolean): ValidationResult
  -isOpeningBracket(c: char): boolean
  -isClosingBracket(c: char): boolean
  -isMatchingPair(opening: char, closing: char): boolean
  -expectedClosing(opening: char): char
}

class ArrayCharStack {
  -DEFAULT_CAPACITY: int
  -elements: char[]
  -size: int
  +push(value: char): void
  +pop(): char
  +peek(): char
  +isEmpty(): boolean
  +size(): int
  +capacity(): int
  +clear(): void
  -ensureCapacity(required: int): void
}

class ExperimentRunner {
  -OPEN: char[]
  -CLOSE: char[]
  -SEED: long
  -validator: BracketValidator
  -random: Random
  +runDefaultExperiments(): void
  -printRow(size: int, depth: int, runs: int, stats: ExperimentStats): void
  -printAsciiChart(title: String, xLabel: String, points: List<ExperimentPoint>): void
  -benchmark(length: int, maxDepth: int, invalidRate: double, runs: int): ExperimentStats
  -generateBracketLikeInput(length: int, maxDepth: int, invalidRate: double): String
  -randomWrongClosing(opening: char): char
  -matchingClosing(opening: char): char
}

class ValidationResult {
  +valid: boolean
  +errorIndex: int
  +message: String
  +maxDepth: int
  +processedLength: int
}

class ExperimentPoint
class ExperimentStats

Main --> BracketValidator : uses
Main --> ExperimentRunner : uses
Main --> ValidationResult : prints
BracketValidator --> ArrayCharStack : uses
BracketValidator --> ValidationResult : returns
ExperimentRunner --> BracketValidator : uses
ExperimentRunner --> ArrayCharStack : uses
ExperimentRunner --> ValidationResult : reads
ExperimentRunner --> ExperimentPoint : contains
ExperimentRunner --> ExperimentStats : computes

@enduml
